--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-Gabriela Guillet
+x<!DOCTYPE html>
+<html>
+<head>
+<title>My Buisness</title>
+</head>
+<body>
+
+<h1> Bracelets </h1>
+ <h3> About My Buisness </h3> 
+  
+<p>.</p>
+
+</body>
+</html>
