--- a/index.html
+++ b/index.html
@@ -4,7 +4,24 @@ x<!DOCTYPE html>
 <title>My Buisness</title>
 </head>
 <body>
+<style>
 
+h1{
+color: rgb(255,255,255);
+
+background-color: rgb(0,0,0);
+}
+
+body{
+
+text-align: center;
+background-image: linear-gradient(rgb(59, 223, 199), rgb(255, 251, 31));
+
+min-width: 100%;
+min-height: 100%;
+
+}
+</style>
 <h1> Bracelets </h1>
  <h3> About My Buisness </h3> 
   
