--- a/index.html
+++ b/index.html
@@ -2,9 +2,8 @@ x<!DOCTYPE html>
 <html>
 <head>
 <title>My Buisness</title>
-</head>
-<body>
-<style>
+ 
+ <style>
 
 h1{
 color: rgb(255,255,255);
@@ -15,17 +14,20 @@ background-color: rgb(0,0,0);
 body{
 
 text-align: center;
-background-image: linear-gradient(rgb(59, 223, 199), rgb(255, 251, 31));
+background-image: linear-gradient(rgb(191, 163, 126), rgb(0, 0, 0));
 
 min-width: 100%;
 min-height: 100%;
 
 }
 </style>
+</head>
+<body>
+
 <h1> Bracelets </h1>
  <h3> About My Buisness </h3> 
   
-<p> y</p>
+<p> my buisnes is i small buisnres and we are braclets an ring, we also make coffee and tea also thease are all home made<br> we also sell in parks in BAHRAIN <em>we will write where we are on te website</em></p>
 
 </body>
 </html>
