--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ min-height: 100%;
 <h1> Bracelets </h1>
  <h3> About My Buisness </h3> 
   
-<p> my buisnes is i small buisnres and we are braclets an ring, we also make coffee and tea also thease are all home made<br> we also sell in parks in BAHRAIN <em>we will write where we are on te website</em></p>
+<p> my buisnes is i small buisnres and we are braclets an ring, we also make coffee and tea also thease are all home made<br> we also sell in parks in BAHRAIN <em>we will write where we are on the website</em></p>
 
 </body>
 </html>
